--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <p>To start, simply sign up for a free account and complete the survey provided. Each valid survey submission earns you $3.90 USD, and the offer is available on any device. Surveys are short, typically taking just 10–15 minutes to finish. Please note that only users from the United States are eligible, and the use of VPNs or proxy traffic is strictly prohibited. With a daily cap of 25 leads, it’s best to share your unique link early in the day to secure conversions. Whether you’re a student, a stay-at-home parent, or just looking for side income, Top Surveys offers a fast, simple, and reliable way to get paid online.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website2', 'https://lnksforyou.com/view.php?id=5541500&pub=3283402')">Visit Top Surveys</button>
+        <button class="visit-btn" onclick="visitWebsite('website2', 'https://lnkmeup.com/view.php?id=5539926&pub=3283402')">Visit Top Surveys</button>
     </div>
 </div>
 
@@ -167,7 +167,7 @@
                 <p>Getting started is simple: Sign up for free, verify your email, and complete your profile to unlock surveys matched to your demographics. Check your dashboard or email regularly for new survey invitations—each completion earns you points redeemable for cash or gift cards. The more surveys you finish, the higher your earnings! On average, active users can pocket $50-$150 monthly by dedicating just 15-30 minutes daily. Payments are processed instantly, so you won’t wait weeks to enjoy your hard-earned rewards.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website3', 'https://directcpi.com/view.php?id=5541321&pub=3283402')">Visit Five Surveys</button>
+        <button class="visit-btn" onclick="visitWebsite('website3', 'https://lnkmeup.com/view.php?id=5541321&pub=3283402')">Visit Five Surveys</button>
     </div>
 </div>
 
@@ -345,7 +345,7 @@
                             <img src="game.png" alt="Related article" loading="lazy">
                         </div>
                         <div class="related-content">
-                            <h4><a href="https://lnksforyou.com/view.php?id=5541119&pub=3283402">Get Paid to Play Games!</a></h4>
+                            <h4><a href="https://mobtrk.link/view.php?id=5541119&pub=3283402">Get Paid to Play Games!</a></h4>
                             <div class="related-date">25/05/2024</div>
                         </div>
                     </div>
