--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <p>Getting started is simple: Sign up for free, verify your email, and complete your profile to unlock surveys matched to your demographics. Check your dashboard or email regularly for new survey invitations—each completion earns you points redeemable for cash or gift cards. The more surveys you finish, the higher your earnings! On average, active users can pocket $50-$150 monthly by dedicating just 15-30 minutes daily. Payments are processed instantly, so you won’t wait weeks to enjoy your hard-earned rewards.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website3', 'https://lnkmeup.com/view.php?id=5541321&pub=3283402')">Visit Five Surveys</button>
+        <button class="visit-btn" onclick="visitWebsite('website3', 'https://directcpi.com/view.php?id=5541321&pub=3283402')">Visit Five Surveys</button>
     </div>
 </div>
 
@@ -190,7 +190,7 @@
                 <p>Earning methods include paid emails ($0.02-$0.05 per email), short surveys, watching promotional videos, and cashback shopping. New members receive a $5 sign-up bonus. The $30 minimum threshold can be withdrawn via PayPal or paper check mailed to your address.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website4', 'https://lnksforyou.com/view.php?id=5541322&pub=3283402')">Visit InboxDollars</button>
+        <button class="visit-btn" onclick="visitWebsite('website4', 'https://directcpi.com/view.php?id=5541319&pub=3283402')">Visit InboxDollars</button>
     </div>
 </div>
 
@@ -525,6 +525,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
