--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <p>To start, simply sign up for a free account and complete the survey provided. Each valid survey submission earns you $3.90 USD, and the offer is available on any device. Surveys are short, typically taking just 10–15 minutes to finish. Please note that only users from the United States are eligible, and the use of VPNs or proxy traffic is strictly prohibited. With a daily cap of 25 leads, it’s best to share your unique link early in the day to secure conversions. Whether you’re a student, a stay-at-home parent, or just looking for side income, Top Surveys offers a fast, simple, and reliable way to get paid online.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website2', 'https://lnkmeup.com/view.php?id=5539926&pub=3283402')">Visit Top Surveys</button>
+        <button class="visit-btn" onclick="visitWebsite('website2', 'https://directcpi.com/view.php?id=5541500&pub=3283402')">Visit Top Surveys</button>
     </div>
 </div>
 
@@ -190,7 +190,7 @@
                 <p>Earning methods include paid emails ($0.02-$0.05 per email), short surveys, watching promotional videos, and cashback shopping. New members receive a $5 sign-up bonus. The $30 minimum threshold can be withdrawn via PayPal or paper check mailed to your address.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website4', 'https://directcpi.com/view.php?id=5541319&pub=3283402')">Visit InboxDollars</button>
+        <button class="visit-btn" onclick="visitWebsite('website4', 'https://lnksforyou.com/view.php?id=5541319&pub=3283402')">Visit InboxDollars</button>
     </div>
 </div>
 
@@ -213,7 +213,7 @@
                 <p>Members participate in product/service surveys earning $1-$4 each. Accumulated points (550 points = $5.50) can be redeemed via PayPal. Regularly updating your profile increases survey opportunities.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website5', 'https://lnksforyou.com/view.php?id=5541314&pub=3283402')">Visit Prime Opinion</button>
+        <button class="visit-btn" onclick="visitWebsite('website5', 'https://directcpi.com/view.php?id=5541314&pub=3283402')">Visit Prime Opinion</button>
     </div>
 </div>
 <div class="web-item" id="website6">
@@ -525,6 +525,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
