--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <p>To start earning with Surveoo, first register for a free account and complete your personal profile thoroughly. Once logged in, the system will send suitable surveys to your email or display them directly on your dashboard. Each completed survey earns reward points that can be converted to cash via PayPal or popular gift cards. With consistent participation, you can typically earn between $50 to $100 per month.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website1', 'https://track.amcmpn.com/click?pid=29152&offer_id=56672')">Visit Surveoo</button>
+        <button class="visit-btn" onclick="visitWebsite('website1', 'https://mobtrk.link/view.php?id=5541514&pub=3283402')">Visit Surveoo</button>
     </div>
 </div>
 
@@ -525,6 +525,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
