--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <p>To start earning with Surveoo, first register for a free account and complete your personal profile thoroughly. Once logged in, the system will send suitable surveys to your email or display them directly on your dashboard. Each completed survey earns reward points that can be converted to cash via PayPal or popular gift cards. With consistent participation, you can typically earn between $50 to $100 per month.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website1', 'https://mobtrk.link/view.php?id=5541514&pub=3283402')">Visit Surveoo</button>
+        <button class="visit-btn" onclick="visitWebsite('website1', 'https://lnksforyou.com/view.php?id=5541514&pub=3283402')">Visit Surveoo</button>
     </div>
 </div>
 
@@ -144,7 +144,7 @@
                 <p>To start, simply sign up for a free account and complete the survey provided. Each valid survey submission earns you $3.90 USD, and the offer is available on any device. Surveys are short, typically taking just 10–15 minutes to finish. Please note that only users from the United States are eligible, and the use of VPNs or proxy traffic is strictly prohibited. With a daily cap of 25 leads, it’s best to share your unique link early in the day to secure conversions. Whether you’re a student, a stay-at-home parent, or just looking for side income, Top Surveys offers a fast, simple, and reliable way to get paid online.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website2', 'https://lnkmeup.com/view.php?id=5541500&pub=3283402')">Visit Top Surveys</button>
+        <button class="visit-btn" onclick="visitWebsite('website2', 'https://mobtrk.link/view.php?id=5541500&pub=3283402')">Visit Top Surveys</button>
     </div>
 </div>
 
@@ -167,7 +167,7 @@
                 <p>Getting started is simple: Sign up for free, verify your email, and complete your profile to unlock surveys matched to your demographics. Check your dashboard or email regularly for new survey invitations—each completion earns you points redeemable for cash or gift cards. The more surveys you finish, the higher your earnings! On average, active users can pocket $50-$150 monthly by dedicating just 15-30 minutes daily. Payments are processed instantly, so you won’t wait weeks to enjoy your hard-earned rewards.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website3', 'https://lnksforyou.com/view.php?id=5541321&pub=3283402')">Visit Five Surveys</button>
+        <button class="visit-btn" onclick="visitWebsite('website3', 'https://mobtrk.link/view.php?id=5541321&pub=3283402')">Visit Five Surveys</button>
     </div>
 </div>
 
@@ -213,7 +213,7 @@
                 <p>Members participate in product/service surveys earning $1-$4 each. Accumulated points (550 points = $5.50) can be redeemed via PayPal. Regularly updating your profile increases survey opportunities.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website5', 'https://directcpi.com/view.php?id=5541314&pub=3283402')">Visit Prime Opinion</button>
+        <button class="visit-btn" onclick="visitWebsite('website5', 'https://lnksforyou.com/view.php?id=5541314&pub=3283402')">Visit Prime Opinion</button>
     </div>
 </div>
 <div class="web-item" id="website6">
@@ -525,6 +525,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
