--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <strong>Why Choose Top Surveys?</strong>
         <p>Top Surveys is a great option for anyone looking to make quick cash online by completing short and easy surveys. With no special skills required, it's perfect for people who want to earn extra money in their spare time. One of the key benefits is its Fast Pay system, allowing users to receive their rewards quickly after completing a valid survey.</p>
         <div class="web-image">
-          <img src="top.png" alt="Top" loading="lazy">
+          <img src="top.png" onclick="visitWebsite('website2', 'https://directcpi.com/view.php?id=5539926&pub=3283402')" alt="Top" loading="lazy">
         </div>
         <div class="pros-cons">
             <div class="pros">
@@ -144,7 +144,7 @@
                 <p>To start, simply sign up for a free account and complete the survey provided. Each valid survey submission earns you $3.90 USD, and the offer is available on any device. Surveys are short, typically taking just 10–15 minutes to finish. Please note that only users from the United States are eligible, and the use of VPNs or proxy traffic is strictly prohibited. With a daily cap of 25 leads, it’s best to share your unique link early in the day to secure conversions. Whether you’re a student, a stay-at-home parent, or just looking for side income, Top Surveys offers a fast, simple, and reliable way to get paid online.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website2', 'https://mobtrk.link/view.php?id=5541500&pub=3283402')">Visit Top Surveys</button>
+        <button class="visit-btn" onclick="visitWebsite('website2', 'https://directcpi.com/view.php?id=5541500&pub=3283402')">Visit Top Surveys</button>
     </div>
 </div>
 
@@ -159,7 +159,7 @@
         <strong>Why Choose Five Surveys?</strong>
         <p>Five Surveys is the perfect side hustle for Australians who want to earn real cash effortlessly. Unlike gigs that demand specialized skills or time-consuming tasks, you only need to share your opinions through quick, engaging surveys. Just spare 10-20 minutes daily to complete surveys tailored to your interests—no experience required! With instant payouts via PayPal or e-gift cards, Five Surveys turns your free time into a flexible income stream. Whether you’re a student, stay-at-home parent, or just looking for extra pocket money, everyone can benefit from this hassle-free opportunity.</p>
         <div class="web-image">
-          <img src="5survey.jpg" alt="5surveys" loading="lazy">
+          <img src="5survey.jpg" onclick="visitWebsite('website3', 'https://mobtrk.link/view.php?id=5541322&pub=3283402') alt="5surveys" loading="lazy">
         </div>
         <div class="pros-cons">
             <div class="pros">
@@ -167,7 +167,7 @@
                 <p>Getting started is simple: Sign up for free, verify your email, and complete your profile to unlock surveys matched to your demographics. Check your dashboard or email regularly for new survey invitations—each completion earns you points redeemable for cash or gift cards. The more surveys you finish, the higher your earnings! On average, active users can pocket $50-$150 monthly by dedicating just 15-30 minutes daily. Payments are processed instantly, so you won’t wait weeks to enjoy your hard-earned rewards.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website3', 'https://mobtrk.link/view.php?id=5541321&pub=3283402')">Visit Five Surveys</button>
+        <button class="visit-btn" onclick="visitWebsite('website3', 'https://directcpi.com/view.php?id=5541321&pub=3283402')">Visit Five Surveys</button>
     </div>
 </div>
 
@@ -182,7 +182,7 @@
         <strong>Why Choose InboxDollars?</strong>
         <p>InboxDollars is perfect for those wanting to earn online with minimal time investment, offering income opportunities as simple as reading emails or browsing the web.</p>
         <div class="web-image">
-          <img src="inboxdollars.jpg" alt="InboxDollars" loading="lazy">
+          <img src="inboxdollars.jpg" onclick="visitWebsite('website4', 'https://directcpi.com/view.php?id=5539884&pub=3283402')" alt="InboxDollars" loading="lazy">
         </div>
         <div class="pros-cons">
             <div class="pros">
@@ -190,7 +190,7 @@
                 <p>Earning methods include paid emails ($0.02-$0.05 per email), short surveys, watching promotional videos, and cashback shopping. New members receive a $5 sign-up bonus. The $30 minimum threshold can be withdrawn via PayPal or paper check mailed to your address.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website4', 'https://lnksforyou.com/view.php?id=5541319&pub=3283402')">Visit InboxDollars</button>
+        <button class="visit-btn" onclick="visitWebsite('website4', 'https://mobtrk.link/view.php?id=5539879&pub=3283402')">Visit InboxDollars</button>
     </div>
 </div>
 
@@ -213,7 +213,7 @@
                 <p>Members participate in product/service surveys earning $1-$4 each. Accumulated points (550 points = $5.50) can be redeemed via PayPal. Regularly updating your profile increases survey opportunities.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website5', 'https://lnksforyou.com/view.php?id=5541314&pub=3283402')">Visit Prime Opinion</button>
+        <button class="visit-btn" onclick="visitWebsite('website5', 'https://directcpi.com/view.php?id=5541314&pub=3283402')">Visit Prime Opinion</button>
     </div>
 </div>
 <div class="web-item" id="website6">
@@ -309,12 +309,12 @@
                     <h3 class="related-title">Related Articles</h3>
                     <div class="related-item">
                         <div class="related-image">
-                            <a href="https://track.amcmpn.com/click?pid=29152&offer_id=56784">
+                            <a href="https://lnksforyou.com/view.php?id=5541315&pub=3283402">
                             <img src="hello.jfif" alt="Related article" loading="lazy">
                             </a>
                         </div>
                         <div class="related-content">
-                            <h4><a href="https://track.amcmpn.com/click?pid=29152&offer_id=56784">HelloSavings Coupons offer pays up to $4/lead for US traffic!</a></h4>
+                            <h4><a href="https://track.amcmpn.com/click?pid=29152&offer_id=56784">Win Iphone16</a></h4>
                             <div class="related-date">10/06/2024</div>
                         </div>
                     </div>
@@ -325,7 +325,7 @@
                             </a>
                         </div>
                         <div class="related-content">
-                            <h4><a href="https://chameleonads.go2cloud.org/aff_c?offer_id=3562&aff_id=7168">Earn easy cash for each completed survey</a></h4>
+                            <h4><a href="https://mobtrk.link/view.php?id=5541319&pub=3283402">Unlock Surprise Rewards!</a></h4>
                             <div class="related-date">05/06/2024</div>
                         </div>
                     </div>
@@ -525,6 +525,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
