--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                             <img src="game.png" alt="Related article" loading="lazy">
                         </div>
                         <div class="related-content">
-                            <h4><a href="https://mobtrk.link/view.php?id=5541119&pub=3283402">Get Paid to Play Games!</a></h4>
+                            <h4><a href="https://lnksforyou.com/view.php?id=5541119&pub=3283402">Get Paid to Play Games!</a></h4>
                             <div class="related-date">25/05/2024</div>
                         </div>
                     </div>
@@ -525,6 +525,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
