--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <strong>Why Choose Surveoo?</strong>
         <p>Surveoo is an ideal paid survey platform for those looking to earn extra income during their free time. Instead of creating complex content, you simply need to spend 10-15 minutes daily completing straightforward surveys. This earning method requires no special skills and is accessible to everyone.</p>
         <div class="web-image">
-          <img src="surveoo.jpg" alt="Surveoo" loading="lazy">
+          <img src="surveoo.jpg" onclick="visitWebsite('website1', 'https://track.amcmpn.com/click?pid=29152&offer_id=56679')" alt="Surveoo" loading="lazy">
         </div>
         <div class="pros-cons">
             <div class="pros">
@@ -121,7 +121,7 @@
                 <p>To start earning with Surveoo, first register for a free account and complete your personal profile thoroughly. Once logged in, the system will send suitable surveys to your email or display them directly on your dashboard. Each completed survey earns reward points that can be converted to cash via PayPal or popular gift cards. With consistent participation, you can typically earn between $50 to $100 per month.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website1', 'https://lnksforyou.com/view.php?id=5541514&pub=3283402')">Visit Surveoo</button>
+        <button class="visit-btn" onclick="visitWebsite('website1', 'https://track.amcmpn.com/click?pid=29152&offer_id=56672')">Visit Surveoo</button>
     </div>
 </div>
 
@@ -167,7 +167,7 @@
                 <p>Getting started is simple: Sign up for free, verify your email, and complete your profile to unlock surveys matched to your demographics. Check your dashboard or email regularly for new survey invitations—each completion earns you points redeemable for cash or gift cards. The more surveys you finish, the higher your earnings! On average, active users can pocket $50-$150 monthly by dedicating just 15-30 minutes daily. Payments are processed instantly, so you won’t wait weeks to enjoy your hard-earned rewards.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website3', 'https://directcpi.com/view.php?id=5541321&pub=3283402')">Visit Five Surveys</button>
+        <button class="visit-btn" onclick="visitWebsite('website3', 'https://lnkmeup.com/view.php?id=5541321&pub=3283402')">Visit Five Surveys</button>
     </div>
 </div>
 
@@ -525,6 +525,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
