--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                             </a>
                         </div>
                         <div class="related-content">
-                            <h4><a href="https://lnkmeup.com/view.php?id=5541261&pub=3283402">Quick Rewards for Your Opinions></a></h4>
+                            <h4><a href="https://mobtrk.link/view.php?id=5541506&pub=3283402">Flirt & Connect on Casual Dates!</a></h4>
                             <div class="related-date">01/06/2024</div>
                         </div>
                     </div>
@@ -525,6 +525,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
