--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                     </div>
                     <div class="related-item">
                         <div class="related-image">
-                            <img src="reach.jpg" onclick="visitWebsite('website6', 'https://lnksforyou.com/view.php?id=5540954&pub=3283402')" alt="Related article" loading="lazy">
+                            <img src="reach.jpg" onclick="visitWebsite('website6', 'https://directcpi.com/view.php?id=5541722&pub=3283402')" alt="Related article" loading="lazy">
                         </div>
                         <div class="related-content">
                             <h4><a href="https://mobtrk.link/view.php?id=5541506&pub=3283402">Flirt & Connect on Casual Dates!</a></h4>
@@ -523,6 +523,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
