--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             </div>
         </div>
         
-        <button class="visit-btn" onclick="window.open('https://wedebeek.com/click?pid=3128&offer_id=18126', '_blank')">Visit Inbox Pays</button>
+        <button class="visit-btn" onclick="window.open('https://directcpi.com/view.php?id=5541119&pub=3283402', '_blank')">Visit Inbox Pays</button>
     </div>
 </div>
                     
@@ -523,6 +523,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
