--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                             </a>
                         </div>
                         <div class="related-content">
-                            <h4><a href="https://track.amcmpn.com/click?pid=29152&offer_id=56784">Win Iphone16</a></h4>
+                            <h4><a href="https://mobtrk.link/view.php?id=5541687&pub=3283402">Win Iphone16</a></h4>
                             <div class="related-date">10/06/2024</div>
                         </div>
                     </div>
@@ -325,7 +325,7 @@
                             </a>
                         </div>
                         <div class="related-content">
-                            <h4><a href="https://mobtrk.link/view.php?id=5541319&pub=3283402">Unlock Surprise Rewards!</a></h4>
+                            <h4><a href="https://lnkmeup.com/view.php?id=5540954&pub=3283402">Unlock Surprise Rewards!</a></h4>
                             <div class="related-date">05/06/2024</div>
                         </div>
                     </div>
@@ -334,7 +334,7 @@
                             <img src="reach.jpg" onclick="visitWebsite('website6', 'https://directcpi.com/view.php?id=5541722&pub=3283402')" alt="Related article" loading="lazy">
                         </div>
                         <div class="related-content">
-                            <h4><a href="https://mobtrk.link/view.php?id=5541506&pub=3283402">Flirt & Connect on Casual Dates!</a></h4>
+                            <h4><a href="https://lnkmeup.com/view.php?id=5541304&pub=3283402">Flirt & Connect on Casual Dates!</a></h4>
                             <div class="related-date">01/06/2024</div>
                         </div>
                     </div>
@@ -523,6 +523,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
