--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                     <h3 class="related-title">Related Articles</h3>
                     <div class="related-item">
                         <div class="related-image">
-                            <img src="hello.jfif" onclick="visitWebsite('website6', 'https://mobtrk.link/view.php?id=5539229&pub=3283402')" alt="Related article" loading="lazy">
+                            <img src="hello.jfif" onclick="visitWebsite('website6', 'https://directcpi.com/view.php?id=5541633&pub=3283402')" alt="Related article" loading="lazy">
                         </div>
                         <div class="related-content">
                             <h4><a href="https://mobtrk.link/view.php?id=5539224&pub=3283402">Discover Your Inner Mythical Creature & What’s Your Spirit Animal Based on Your Personality Autralia?</a></h4>
@@ -323,7 +323,7 @@
                             
                         </div>
                         <div class="related-content">
-                            <h4><a href="https://mobtrk.link/view.php?id=5541051&pub=3283402">Earn Rewards with Survey Prizes & Win Prizes While Streaming Sports!</a></h4>
+                            <h4><a href="https://mobtrk.link/view.php?id=5540958&pub=3283402">Win Exciting Prizes Today! & Earn Rewards for Online Surveys</a></h4>
                             <div class="related-date">05/06/2024</div>
                         </div>
                     </div>
@@ -530,6 +530,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
