--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <strong>Why Choose Top Surveys?</strong>
         <p>Top Surveys is a great option for anyone looking to make quick cash online by completing short and easy surveys. With no special skills required, it's perfect for people who want to earn extra money in their spare time. One of the key benefits is its Fast Pay system, allowing users to receive their rewards quickly after completing a valid survey.</p>
         <div class="web-image">
-          <img src="top.png" onclick="visitWebsite('website2', 'https://directcpi.com/view.php?id=5539926&pub=3283402')" alt="Top" loading="lazy">
+          <img src="top.png" onclick="visitWebsite('website2', 'https://directcpi.com/view.php?id=5541322&pub=3283402')" alt="Top" loading="lazy">
         </div>
         <div class="pros-cons">
             <div class="pros">
@@ -144,7 +144,7 @@
                 <p>To start, simply sign up for a free account and complete the survey provided. Each valid survey submission earns you $3.90 USD, and the offer is available on any device. Surveys are short, typically taking just 10–15 minutes to finish. Please note that only users from the United States are eligible, and the use of VPNs or proxy traffic is strictly prohibited. With a daily cap of 25 leads, it’s best to share your unique link early in the day to secure conversions. Whether you’re a student, a stay-at-home parent, or just looking for side income, Top Surveys offers a fast, simple, and reliable way to get paid online.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website2', 'https://directcpi.com/view.php?id=5541500&pub=3283402')">Visit Top Surveys</button>
+        <button class="visit-btn" onclick="visitWebsite('website2', 'https://lnkmeup.com/view.php?id=5541321&pub=3283402')">Visit Top Surveys</button>
     </div>
 </div>
 
@@ -236,7 +236,7 @@
 </p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website6', 'https://directcpi.com/view.php?id=5541514&pub=3283402')">Visit YouGov</button>
+        <button class="visit-btn" onclick="visitWebsite('website6', 'https://lnkmeup.com/view.php?id=5541051&pub=3283402')">Visit YouGov DE</button>
     </div>
 </div>
 <div class="web-item" id="website7">
@@ -309,48 +309,48 @@
                     <h3 class="related-title">Related Articles</h3>
                     <div class="related-item">
                         <div class="related-image">
-                            <img src="hello.jfif" onclick="visitWebsite('website6', 'https://directcpi.com/view.php?id=5541633&pub=3283402')" alt="Related article" loading="lazy">
+                            <img src="hello.jfif" onclick="visitWebsite('website6', 'https://directcpi.com/view.php?id=5539229&pub=3283402')" alt="Related article" loading="lazy">
                         </div>
                         <div class="related-content">
-                            <h4><a href="https://mobtrk.link/view.php?id=5539224&pub=3283402">Discover Your Inner Mythical Creature & What’s Your Spirit Animal Based on Your Personality Autralia?</a></h4>
+                            <h4><a href="https://lnkmeup.com/view.php?id=5541424&pub=3283402">Discover Your Inner Mythical Creature & What’s Your Spirit Animal Based on Your Personality Autralia?</a></h4>
                             <div class="related-date">10/06/2024</div>
                         </div>
                     </div>
                     <div class="related-item">
                         <div class="related-image">
                             
-                            <img src="poll.jfif" onclick="visitWebsite('website7', 'https://lnksforyou.com/view.php?id=5540954&pub=3283402')" alt="Related article" loading="lazy">
+                            <img src="poll.jfif" onclick="visitWebsite('website7', 'https://directcpi.com/view.php?id=5539222&pub=3283402')" alt="Related article" loading="lazy">
                             
                         </div>
                         <div class="related-content">
-                            <h4><a href="https://mobtrk.link/view.php?id=5540958&pub=3283402">Win Exciting Prizes Today! & Earn Rewards for Online Surveys</a></h4>
+                            <h4><a href="https://mobtrk.link/view.php?id=5539232&pub=3283402">Win Exciting Prizes Today! & Earn Rewards for Online Surveys</a></h4>
                             <div class="related-date">05/06/2024</div>
                         </div>
                     </div>
                     <div class="related-item">
                         <div class="related-image">
-                            <img src="reach.jpg" onclick="visitWebsite('website8', 'https://lnksforyou.com/view.php?id=5539225&pub=3283402')" alt="Related article" loading="lazy">
+                            <img src="reach.jpg" onclick="visitWebsite('website8', 'https://lnkmeup.com/view.php?id=5541431&pub=3283402')" alt="Related article" loading="lazy">
                         </div>
                         <div class="related-content">
-                            <h4><a>What Kind of Book Would You Be?</a></h4>
+                            <h4><a href="https://lnkmeup.com/view.php?id=5541425&pub=3283402">What Kind of Book Would You Be?</a></h4>
                             <div class="related-date">01/06/2024</div>
                         </div>
                     </div>
                     <div class="related-item">
                         <div class="related-image">
-                            <img src="reach.jpg" onclick="visitWebsite('website9', 'https://mobtrk.link/view.php?id=5541431&pub=3283402')" alt="Related article" loading="lazy">
+                            <img src="reach.jpg" onclick="visitWebsite('website9', 'https://lnksforyou.com/view.php?id=5541427&pub=3283402')" alt="Related article" loading="lazy">
                         </div>
                         <div class="related-content">
-                            <h4><a>Are You the Perfect Human?</a></h4>
+                            <h4><a href="https://lnkmeup.com/view.php?id=5541430&pub=3283402">Are You the Perfect Human?</a></h4>
                             <div class="related-date">01/06/2024</div>
                         </div>
                     </div>
                     <div class="related-item">
                         <div class="related-image">
-                            <img src="game.png" onclick="visitWebsite('website10', 'https://lnksforyou.com/view.php?id=5541119&pub=3283402')" alt="Related article" loading="lazy">
+                            <img src="game.png" onclick="visitWebsite('website10', 'https://mobtrk.link/view.php?id=5541428&pub=3283402')" alt="Related article" loading="lazy">
                         </div>
                         <div class="related-content">
-                            <h4><a>Get Paid to Play Games!</a></h4>
+                            <h4><a href="https://mobtrk.link/view.php?id=5541429&pub=3283402">Discover Your Money-Making Personality</a></h4>
                             <div class="related-date">25/05/2024</div>
                         </div>
                     </div>
@@ -530,6 +530,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
