--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <p>To start earning with Surveoo, first register for a free account and complete your personal profile thoroughly. Once logged in, the system will send suitable surveys to your email or display them directly on your dashboard. Each completed survey earns reward points that can be converted to cash via PayPal or popular gift cards. With consistent participation, you can typically earn between $50 to $100 per month.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website1', 'https://lnksforyou.com/view.php?id=5541514&pub=3283402')">Visit Surveoo</button>
+        <button class="visit-btn" onclick="visitWebsite('website1', 'https://mobtrk.link/view.php?id=5541767&pub=3283402')">Visit Surveoo IL</button>
     </div>
 </div>
 
@@ -338,19 +338,19 @@
                     </div>
                     <div class="related-item">
                         <div class="related-image">
-                            <img src="reach.jpg" onclick="visitWebsite('website9', 'https://lnksforyou.com/view.php?id=5541427&pub=3283402')" alt="Related article" loading="lazy">
+                            <img src="reach.jpg" onclick="visitWebsite('website9', 'https://lnksforyou.com/view.php?id=5541634&pub=3283402')" alt="Related article" loading="lazy">
                         </div>
                         <div class="related-content">
-                            <h4><a href="https://lnkmeup.com/view.php?id=5541430&pub=3283402">Are You the Perfect Human?</a></h4>
+                            <h4><a href="">Get Rewarded: Download Now!</a></h4>
                             <div class="related-date">01/06/2024</div>
                         </div>
                     </div>
                     <div class="related-item">
                         <div class="related-image">
-                            <img src="game.png" onclick="visitWebsite('website10', 'https://mobtrk.link/view.php?id=5541428&pub=3283402')" alt="Related article" loading="lazy">
+                            <img src="game.png" onclick="visitWebsite('website10', 'https://lnksforyou.com/view.php?id=5541119&pub=3283402')" alt="Related article" loading="lazy">
                         </div>
                         <div class="related-content">
-                            <h4><a href="https://mobtrk.link/view.php?id=5541429&pub=3283402">Discover Your Money-Making Personality</a></h4>
+                            <h4><a href=""> Get Paid to Play Games!</a></h4>
                             <div class="related-date">25/05/2024</div>
                         </div>
                     </div>
@@ -530,6 +530,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
