--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <p>Members participate in product/service surveys earning $1-$4 each. Accumulated points (550 points = $5.50) can be redeemed via PayPal. Regularly updating your profile increases survey opportunities.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website5', 'https://directcpi.com/view.php?id=5541314&pub=3283402')">Visit Prime Opinion</button>
+        <button class="visit-btn" onclick="visitWebsite('website5', 'https://directcpi.com/view.php?id=5541594&pub=3283402')">Visit Prime Opinion</button>
     </div>
 </div>
 <div class="web-item" id="website6">
@@ -309,21 +309,21 @@
                     <h3 class="related-title">Related Articles</h3>
                     <div class="related-item">
                         <div class="related-image">
-                            <img src="hello.jfif" onclick="visitWebsite('website6', 'https://directcpi.com/view.php?id=5539229&pub=3283402')" alt="Related article" loading="lazy">
+                            <img src="hello.jfif" onclick="visitWebsite('website6', 'https://directcpi.com/view.php?id=5541249&pub=3283402')" alt="Related article" loading="lazy">
                         </div>
                         <div class="related-content">
-                            <h4><a href="https://lnkmeup.com/view.php?id=5541424&pub=3283402">Discover Your Inner Mythical Creature & What’s Your Spirit Animal Based on Your Personality Autralia?</a></h4>
+                            <h4><a href="">Ask GfK</a></h4>
                             <div class="related-date">10/06/2024</div>
                         </div>
                     </div>
                     <div class="related-item">
                         <div class="related-image">
                             
-                            <img src="poll.jfif" onclick="visitWebsite('website7', 'https://directcpi.com/view.php?id=5539222&pub=3283402')" alt="Related article" loading="lazy">
+                            <img src="poll.jfif" onclick="visitWebsite('website7', 'https://lnkmeup.com/view.php?id=5541563&pub=3283402')" alt="Related article" loading="lazy">
                             
                         </div>
                         <div class="related-content">
-                            <h4><a href="https://mobtrk.link/view.php?id=5539232&pub=3283402">Win Exciting Prizes Today! & Earn Rewards for Online Surveys</a></h4>
+                            <h4><a href=""> Claim Your Exciting Gift Today!</a></h4>
                             <div class="related-date">05/06/2024</div>
                         </div>
                     </div>
@@ -530,6 +530,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
