--- a/index.html
+++ b/index.html
@@ -309,21 +309,21 @@
                     <h3 class="related-title">Related Articles</h3>
                     <div class="related-item">
                         <div class="related-image">
-                            <img src="hello.jfif" onclick="visitWebsite('website6', 'https://directcpi.com/view.php?id=5541249&pub=3283402')" alt="Related article" loading="lazy">
+                            <img src="hello.jfif" onclick="visitWebsite('website6', 'https://lnkmeup.com/view.php?id=5539229&pub=3283402')" alt="Related article" loading="lazy">
                         </div>
                         <div class="related-content">
-                            <h4><a href="">Ask GfK</a></h4>
+                            <h4><a href="">Discover Your Inner Mythical Creature</a></h4>
                             <div class="related-date">10/06/2024</div>
                         </div>
                     </div>
                     <div class="related-item">
                         <div class="related-image">
                             
-                            <img src="poll.jfif" onclick="visitWebsite('website7', 'https://lnkmeup.com/view.php?id=5541563&pub=3283402')" alt="Related article" loading="lazy">
+                            <img src="poll.jfif" onclick="visitWebsite('website7', 'https://lnksforyou.com/view.php?id=5541427&pub=3283402')" alt="Related article" loading="lazy">
                             
                         </div>
                         <div class="related-content">
-                            <h4><a href=""> Claim Your Exciting Gift Today!</a></h4>
+                            <h4><a href=""> Discover Your Magical Power</a></h4>
                             <div class="related-date">05/06/2024</div>
                         </div>
                     </div>
@@ -338,19 +338,19 @@
                     </div>
                     <div class="related-item">
                         <div class="related-image">
-                            <img src="reach.jpg" onclick="visitWebsite('website9', 'https://lnksforyou.com/view.php?id=5541634&pub=3283402')" alt="Related article" loading="lazy">
+                            <img src="reach.jpg" onclick="visitWebsite('website9', 'https://directcpi.com/view.php?id=5539211&pub=3283402')" alt="Related article" loading="lazy">
                         </div>
                         <div class="related-content">
-                            <h4><a href="">Get Rewarded: Download Now!</a></h4>
+                            <h4><a href="">What Element Best Represents Your Personality?</a></h4>
                             <div class="related-date">01/06/2024</div>
                         </div>
                     </div>
                     <div class="related-item">
                         <div class="related-image">
-                            <img src="game.png" onclick="visitWebsite('website10', 'https://lnksforyou.com/view.php?id=5541119&pub=3283402')" alt="Related article" loading="lazy">
+                            <img src="game.png" onclick="visitWebsite('website10', 'https://mobtrk.link/view.php?id=5539219&pub=3283402')" alt="Related article" loading="lazy">
                         </div>
                         <div class="related-content">
-                            <h4><a href=""> Get Paid to Play Games!</a></h4>
+                            <h4><a href=""> Which Famous Historical Figure Are You Most Like?</a></h4>
                             <div class="related-date">25/05/2024</div>
                         </div>
                     </div>
@@ -530,6 +530,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
