--- a/index.html
+++ b/index.html
@@ -309,10 +309,10 @@
                     <h3 class="related-title">Related Articles</h3>
                     <div class="related-item">
                         <div class="related-image">
-                            <img src="hello.jfif" onclick="visitWebsite('website6', 'https://lnkmeup.com/view.php?id=5539229&pub=3283402')" alt="Related article" loading="lazy">
+                            <img src="hello.jfif" onclick="visitWebsite('website6', 'https://lnksforyou.com/view.php?id=5539219&pub=3283402')" alt="Related article" loading="lazy">
                         </div>
                         <div class="related-content">
-                            <h4><a href="">Discover Your Inner Mythical Creature</a></h4>
+                            <h4><a href="">Which Famous Historical Figure Are You Most Like?</a></h4>
                             <div class="related-date">10/06/2024</div>
                         </div>
                     </div>
@@ -530,6 +530,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
