--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <p>To start earning with Surveoo, first register for a free account and complete your personal profile thoroughly. Once logged in, the system will send suitable surveys to your email or display them directly on your dashboard. Each completed survey earns reward points that can be converted to cash via PayPal or popular gift cards. With consistent participation, you can typically earn between $50 to $100 per month.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website1', 'https://mobtrk.link/view.php?id=5541767&pub=3283402')">Visit Surveoo IL</button>
+        <button class="visit-btn" onclick="visitWebsite('website1', 'https://mobtrk.link/view.php?id=5541767&pub=3283402')">Visit Surveoo</button>
     </div>
 </div>
 
@@ -144,7 +144,7 @@
                 <p>To start, simply sign up for a free account and complete the survey provided. Each valid survey submission earns you $3.90 USD, and the offer is available on any device. Surveys are short, typically taking just 10–15 minutes to finish. Please note that only users from the United States are eligible, and the use of VPNs or proxy traffic is strictly prohibited. With a daily cap of 25 leads, it’s best to share your unique link early in the day to secure conversions. Whether you’re a student, a stay-at-home parent, or just looking for side income, Top Surveys offers a fast, simple, and reliable way to get paid online.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website2', 'https://lnkmeup.com/view.php?id=5541321&pub=3283402')">Visit Top Surveys</button>
+        <button class="visit-btn" onclick="visitWebsite('website2', 'https://mobtrk.link/view.php?id=5539926&pub=3283402')">Visit Top Surveys</button>
     </div>
 </div>
 
@@ -213,7 +213,7 @@
                 <p>Members participate in product/service surveys earning $1-$4 each. Accumulated points (550 points = $5.50) can be redeemed via PayPal. Regularly updating your profile increases survey opportunities.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website5', 'https://directcpi.com/view.php?id=5541594&pub=3283402')">Visit Prime Opinion</button>
+        <button class="visit-btn" onclick="visitWebsite('website5', 'https://lnkmeup.com/view.php?id=5541314&pub=3283402')">Visit Prime Opinion</button>
     </div>
 </div>
 <div class="web-item" id="website6">
@@ -236,7 +236,7 @@
 </p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website6', 'https://lnkmeup.com/view.php?id=5541051&pub=3283402')">Visit YouGov DE</button>
+        <button class="visit-btn" onclick="visitWebsite('website6', 'https://lnkmeup.com/view.php?id=5541051&pub=3283402')">Visit YouGov</button>
     </div>
 </div>
 <div class="web-item" id="website7">
@@ -309,17 +309,17 @@
                     <h3 class="related-title">Related Articles</h3>
                     <div class="related-item">
                         <div class="related-image">
-                            <img src="hello.jfif" onclick="visitWebsite('website6', 'https://lnkmeup.com/view.php?id=5541431&pub=3283402')" alt="Related article" loading="lazy">
+                            <img src="hello.jfif" onclick="visitWebsite('website6', 'https://mobtrk.link/view.php?id=5541429&pub=3283402')" alt="Related article" loading="lazy">
                         </div>
                         <div class="related-content">
-                            <h4><a href="">Are You the Perfect Human?</a></h4>
+                            <h4><a href="">Discover Your Money-Making Personality</a></h4>
                             <div class="related-date">10/06/2024</div>
                         </div>
                     </div>
                     <div class="related-item">
                         <div class="related-image">
                             
-                            <img src="poll.jfif" onclick="visitWebsite('website7', 'https://lnksforyou.com/view.php?id=5541427&pub=3283402')" alt="Related article" loading="lazy">
+                            <img src="poll.jfif" onclick="visitWebsite('website7', 'https://lnkmeup.com/view.php?id=5541429&pub=3283402')" alt="Related article" loading="lazy">
                             
                         </div>
                         <div class="related-content">
@@ -530,6 +530,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
