--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 </p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website6', 'https://lnkmeup.com/view.php?id=5541051&pub=3283402')">Visit YouGov</button>
+        <button class="visit-btn" onclick="visitWebsite('website6', 'https://directcpi.com/view.php?id=5541276&pub=3283402')">Visit Hey Cash SG</button>
     </div>
 </div>
 <div class="web-item" id="website7">
@@ -530,6 +530,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
