--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 <div class="web-item" id="website4">
     <div class="web-rank">4</div>
     <div class="web-info">
-        <h3 class="web-name">InboxDollarsAU – Earn Through Simple Tasks</h3>
+        <h3 class="web-name">InboxDollars – Earn Through Simple Tasks</h3>
         <div class="rating">
             <div class="stars">★★★★☆</div>
             <span>4.5/5 - Very Good</span>
@@ -190,7 +190,7 @@
                 <p>Earning methods include paid emails ($0.02-$0.05 per email), short surveys, watching promotional videos, and cashback shopping. New members receive a $5 sign-up bonus. The $30 minimum threshold can be withdrawn via PayPal or paper check mailed to your address.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website4', 'https://mobtrk.link/view.php?id=5539879&pub=3283402')">Visit InboxDollars</button>
+        <button class="visit-btn" onclick="visitWebsite('website4', 'https://mobtrk.link/view.php?id=5539879&pub=3283402')">Visit Heycash</button>
     </div>
 </div>
 
@@ -213,7 +213,7 @@
                 <p>Members participate in product/service surveys earning $1-$4 each. Accumulated points (550 points = $5.50) can be redeemed via PayPal. Regularly updating your profile increases survey opportunities.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website5', 'https://lnkmeup.com/view.php?id=5541314&pub=3283402')">Visit Prime Opinion</button>
+        <button class="visit-btn" onclick="visitWebsite('website5', 'https://mobtrk.link/view.php?id=5541314&pub=3283402')">Visit Prime Opinion</button>
     </div>
 </div>
 <div class="web-item" id="website6">
@@ -260,7 +260,7 @@
             </div>
         </div>
         
-                <button class="visit-btn" onclick="visitWebsite('website6', 'https://directcpi.com/view.php?id=5541276&pub=3283402')">Visit Hey Cash SG</button>
+                <button class="visit-btn" onclick="visitWebsite('website6', 'https://directcpi.com/view.php?id=5541276&pub=3283402')">Visit Inbox Pays</button>
     </div>
 </div>
                     
@@ -530,6 +530,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
