--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <p>Members participate in product/service surveys earning $1-$4 each. Accumulated points (550 points = $5.50) can be redeemed via PayPal. Regularly updating your profile increases survey opportunities.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website5', 'https://directcpi.com/view.php?id=5541314&pub=3283402')">Visit Prime Opinion</button>
+        <button class="visit-btn" onclick="visitWebsite('website5', 'https://lnksforyou.com/view.php?id=5539917&pub=3283402')">Visit Prime Opinion</button>
     </div>
 </div>
 <div class="web-item" id="website6">
@@ -530,6 +530,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
