--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <p>Earning methods include paid emails ($0.02-$0.05 per email), short surveys, watching promotional videos, and cashback shopping. New members receive a $5 sign-up bonus. The $30 minimum threshold can be withdrawn via PayPal or paper check mailed to your address.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website4', 'https://mobtrk.link/view.php?id=5539879&pub=3283402')">Visit Heycash</button>
+        <button class="visit-btn" onclick="visitWebsite('website4', 'https://www.lnksforyou.com/view.php?id=5541911&pub=3283402')">Visit Heycash</button>
     </div>
 </div>
 
@@ -530,6 +530,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
